k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummyk8s-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummyk8s
  template:
    metadata:
      labels:
        app: dummyk8s
    spec:
      containers:
      - name: dummyk8s
        image: nogaku/dummyk8s:v5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
