k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummyk8s-pod
spec:
  containers:
  - name: dummyk8s
    image: nogaku/dummyk8s:v4
    ports:
    - containerPort: 80
