k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapp-clusterip
spec:
  type: ClusterIP
  selector:
    app: userapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
