k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapp-lb
spec:
  type: LoadBalancer
  selector:
    app: userapp
  ports:
    - port: 80
      targetPort: 80
