k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummyk8s-nodeport
spec:
  type: NodePort
  selector:
    app: dummyk8s
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
