k8s/ingressv2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummyk8sv2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dummyk8sv2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummyk8sv2-service
                port:
                  number: 80
